syntax = "proto3";
option go_package=".;withdraw_pb";
package withdraw;

message SubmitRequest{
  int32 amount_item_id = 1;
  double amount = 2;
  int32 withdraw_account_id = 3;
  string lang = 4;
}
message SubmitReply{
 int32  code=1;
}

message BindRequest{
  int32 amount_item_id = 1;
  double amount = 2;
  int32 withdraw_account_id = 3;
  string lang = 4;
}

service WithdrawService {
  rpc Submit(SubmitRequest) returns (SubmitReply);
  rpc Bind(BindRequest) returns (SubmitReply);
}